--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 	implementation group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.19.1'
 	implementation 'com.google.protobuf:protobuf-gradle-plugin:0.8.18'
 	testImplementation group: 'junit', name: 'junit', version: '4.12'
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+
 }
 
 test {
