[Syte.io][Semyonm home task] - Service + Mappers implementation

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'idea'
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = "1.9"
+sourceCompatibility = "16"
 repositories {
 	mavenCentral()
 }
@@ -39,4 +39,4 @@ dependencies {
 test {
 	useJUnit()
 }
-targetCompatibility = JavaVersion.VERSION_1_9
+targetCompatibility = JavaVersion.VERSION_16
